ingress_k.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress

spec:

  rules:

    - host: hello-worldapp.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: my-service

                port:

                  number: 8080
